<resources>
    <string name="app_name" translatable="false">MSFM</string>

    <string name="edit_profile_information">Edit profile information</string>
    <string name="notifications">Notifications</string>
    <string name="contact_us">Contact us</string>
    <string name="privacy_policy">Privacy policy</string>

    <string name="account_management">Account management</string>
    <string name="service_management">Service management</string>
    <string name="field_management">Field management</string>
    <string name="invoice_management">Invoice management</string>

    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>

    <string name="change_password">Change password</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="save">Save</string>

    <string name="edit_profile">Edit profile</string>
    <string name="full_name">Full name</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="phone_number">Phone number</string>
    <string name="gender">Gender</string>
    <string name="men">Men</string>
    <string name="women">Women</string>
    <string name="other">Other</string>
    <string name="role">Role</string>
    <string name="staff">Staff</string>
    <string name="manager">Manager</string>
    <string name="error_full_name_empty">Full name is required</string>
    <string name="error_date_of_birth_empty">Date of birth is required</string>
    <string name="error_date_of_birth_incorrect_format">Date of birth incorrect format dd/MM/yyyy</string>
    <string name="error_date_of_birth_not_exist">Date of birth does not exist</string>
    <string name="error_phone_number_empty">Phone number is required</string>
    <string name="error_phone_number_incorrect_format">The phone number must have 10 digits!!!</string>
    <string name="error_password_not_match">Password does not match</string>
    <string name="error_password_empty">Password is required</string>
    <string name="error_password_incorrect">Password is incorrect</string>
    <string name="error_password_too_short_or_long">Password must be at least 6 characters and at most 20 characters</string>
    <string name="error_minimum_spend_amount_empty">Minimum spend amount is required</string>
    <string name="error_membership_name_empty">Membership name is required</string>
    <string name="error_minimum_spend_amount_too_low">Minimum spend amount must be greater than 1000000</string>
    <string name="error_empty">This field is required</string>
    <string name="error_discount_rate_too_high">Discount rate must be less than 50%</string>

    <string name="hello">Hello</string>
    <string name="field">Field</string>
    <string name="upcoming">Upcoming</string>
    <string name="live">Live</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="service">Services</string>
    <string name="see_all">See all</string>

    <string name="search">Search</string>
    <string name="in_stock">In stock</string>
    <string name="unit">Unit</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="add">Add</string>
    <string name="chosen">Chosen</string>
    <string name="payment">Payment</string>

    <string name="calendar">Calendar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="delete">Delete</string>
    <string name="field_name">Field name</string>
    <string name="activate">Activate</string>
    <string name="inactivate">Inactivate</string>
    <string name="id">ID</string>
    <string name="_5_a_side">5 a side</string>
    <string name="_7_a_side">7-a-side</string>
    <string name="sub_fields">Sub fields</string>
    <string name="setting_membership">Setting Membership</string>
    <string name="membership_name">Membership name</string>
    <string name="minimum_spend_amount">Minimum spend amount</string>
    <string name="apply_for_customer">Apply for customer spending over</string>

    <string name="services_payment">Services payment</string>
    <string name="customer_information">Customer information</string>
    <string name="add_customer">Add customer</string>
    <string name="total_service_price">Total service price</string>
    <string name="discount">Discount</string>
    <string name="total_amount">Total amount</string>
    <string name="payment_code">Payment code</string>
    <string name="payment_time">Payment time</string>
    <string name="home_page">Home page</string>
    <string name="service_page">Service page</string>
    <string name="payment_successfully">Payment Successfully!!!</string>
    <string name="payment_error">Payment Error!!!</string>
    <string name="setting_price_list">Setting Price List</string>
    <string name="start_time">Start time: </string>
    <string name="end_time">End time: </string>
    <string name="warning_booking">Time on!!!</string>
    <string name="call_customer">Call Customer</string>
    <string name="rental_fee">Rental fee</string>
    <string name="additional_services">Additional Services</string>
    <string name="total">Total:</string>
    <string name="confirm">Confirm</string>
    <string name="dimiss">Dimiss</string>
    <string name="reset_password">Reset password</string>
    <string name="reset_password_successfully">Reset password successfully</string>
    <string name="Your_new_password_send_to_your_phone">Your new password has been send to your phone number!!!</string>

    <string name="choose_option">Choose an option upload image</string>
    <string name="take_photo">Take photo</string>
    <string name="choose_from_gallery">Choose from gallery</string>
    <string name="add_field">Add Field</string>
    <string name="active">Active</string>
    <string name="inactive">Inactive</string>
    <string name="unit_price_30m">Unit price / 30m</string>
    <string name="total_field_price">Total field price</string>
    <string name="additional_fee">Additional fee</string>
    <string name="add_booking">Add booking</string>
    <string name="customer_name">Customer name</string>
    <string name="sold">Sold</string>
    <string name="view_detail">View detail</string>
    <string name="revert">Revert</string>
    <string name="deleted">Deleted</string>
    <string name="kh_ch_h_ng_m_i">new customer</string>
    <string name="price">Price</string>
    <string name="filter_default">Default</string>
    <string name="increase">Increase</string>
    <string name="decrease">Decrease</string>
    <string name="service_name">Name</string>
    <string name="service_price">Price</string>
    <string name="service_quantity">Quantity</string>
    <string name="service_description">Description</string>
    <string name="add_service">Add service</string>
    <string name="update_service">Update service</string>
    <string name="view_service_details">View service details</string>
    <string name="require">(Require)</string>
    <string name="error_contains_non_number_character">Contains non-number character</string>
    <string name="success">Success</string>
    <string name="failed">Failed</string>
    <string name="warning">Warning</string>
    <string name="string_continue">Continue</string>
    <string name="customer_management">Customer management</string>
    <string name="employee_management">Employee management</string>
    <string name="edit">Edit</string>
    <string name="dismissal">Dimissal</string>
    <string name="add_employee">Add employee</string>
    <string name="edit_employee">Edit employee</string>
    <string name="booking_day">Booking day</string>
    <string name="match_day">Match day</string>
    <string name="customer">Customer</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="status">Status:</string>
    <string name="phone">Phone</string>
    <string name="customer_2">Customer</string>
    <string name="service_in_hoa">SERVICE</string>
    <string name="edit_customer">Edit customer</string>
    <string name="customer_has_been_deleted">Customer was baned</string>
    <string name="price_per_30_minutes">Price per 30 minutes</string>
    <string name="analysis">Analysis</string>
    <string name="invoice_detail">Invoice detail</string>
    <string name="service_usage">Service usage</string>
    <string name="login_with_fingerprint">Login with fingerprint</string>
    <string name="fingerprint">Fingerprint</string>
    <string name="fingerprint_message">Please place your fingerprint on the sensor to continue</string>
    <string name="cancel">Cancel</string>
    <string name="total_revenue">TOTAL REVENUE</string>
    <string name="revenue_today">REVENUE TODAY</string>
    <string name="income">Income</string>
    <string name="top_services">Top services</string>
    <string name="booking">Booking</string>
    <string name="schedule">SCHEDULE</string>
    <string name="final_amount">Final amount</string>
    <string name="by_day">By day</string>
    <string name="logout">Logout</string>
    <string name="th_ng_tin_tr_n_u">Match Info</string>
    <string name="h_a_n_t_m_t_nh">Provisional Invoice</string>
    <string name="update">Update</string>
    <string name="sold_out">Sold out</string>
</resources>