<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group_menu_direction"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_option_increase"
            android:title="@string/increase" />
        <item
            android:id="@+id/menu_option_decrease"
            android:title="@string/decrease" />
    </group>

    <item android:title="────────────────"
        android:enabled="false"/>

    <group
        android:id="@+id/group_menu_order_by"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_option_default"
            android:title="@string/filter_default" />
        <item
            android:id="@+id/menu_option_price"
            android:title="@string/price" />
        <item
            android:id="@+id/menu_option_sold"
            android:title="@string/sold" />
        <item
            android:id="@+id/menu_option_in_stock"
            android:title="@string/in_stock" />
    </group>
</menu>