<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="22dp"
    tools:context=".activity.EditProfileActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">

        <TextView
            style="@style/header_text_custom"
            android:layout_gravity="center"
            android:text="@string/edit_profile"
            android:textColor="@color/black" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/ic_back_arrow"
            android:onClick="goBack" />
    </FrameLayout>

    <LinearLayout
        style="@style/width_mp_height_wc"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <TextView
            style="@style/header_text_custom"
            android:text="Staff"
            android:textColor="@color/black" />

        <TextView
            style="@style/header_text_custom"
            android:text=", " />

        <TextView
            style="@style/header_text_custom"
            android:text="Thanh Huy"
            android:textColor="@color/primaryColor" />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/text_input_layout_custom"
        android:layout_marginTop="50dp">

        <EditText
            style="@style/width_mp_height_wc"
            android:autofillHints="emailAddress"
            android:hint="@string/full_name"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textSize="17sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/text_input_layout_custom"
        android:layout_marginTop="15dp">

        <EditText
            style="@style/width_mp_height_wc"
            android:hint="@string/date_of_birth"
            android:inputType="date"
            android:maxLines="1"
            android:textSize="17sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/text_input_layout_custom"
        android:layout_marginTop="15dp">

        <EditText
            style="@style/width_mp_height_wc"
            android:autofillHints="phone"
            android:editable="false"
            android:hint="@string/phone_number"
            android:text="0869017464"
            android:textSize="17sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        style="@style/width_mp_height_wc"
        android:layout_height="55dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/background_border_2dp_radius_10dp"
        android:orientation="horizontal">

        <TextView
            style="@style/width_wc_height_wc"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:text="@string/gender"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <RadioGroup
            style="@style/width_wc_height_wc"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal">

            <RadioButton
                style="@style/radio_button_custom"
                android:layout_marginEnd="10dp"
                android:text="@string/men"
                android:textSize="18sp" />

            <RadioButton
                style="@style/radio_button_custom"
                android:text="@string/women"
                android:buttonTint="@color/primaryColor"
                android:textSize="18sp" />
        </RadioGroup>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:background="@drawable/background_green_radius_10dp"
        android:onClick="saveChangeProfile"
        android:paddingStart="70dp"
        android:paddingEnd="70dp"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold" />
</LinearLayout>