<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/width_mp_height_wc"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingStart="30dp"
    android:paddingTop="10dp"
    android:paddingEnd="30dp">

    <TextView
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/add_customer"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/text_input_layout_custom"
        android:layout_marginTop="30dp">

        <EditText
            android:id="@+id/edit_text_phone_number"
            style="@style/width_mp_height_wc"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:maxLines="1"
            android:textSize="17sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/text_input_layout_custom"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/edit_text_customer_name"
            style="@style/width_mp_height_wc"
            android:hint="@string/customer_name"
            android:inputType="text"
            android:maxLines="1"
            android:textSize="17sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        style="@style/width_mp_height_wc"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_cancel"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:background="@drawable/background_white_radius_10dp"
            android:backgroundTint="@color/gray"
            android:lines="1"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_add"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:background="@drawable/background_white_radius_10dp"
            android:backgroundTint="@color/primaryColor"
            android:lines="1"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/add"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>