<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="22dp"
    tools:context=".activity.EditProfileActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">

        <TextView
            style="@style/header_text_custom"
            android:layout_gravity="center"
            android:text="@string/change_password"
            android:textColor="@color/black" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/ic_back_arrow"
            android:onClick="goBack" />
    </FrameLayout>

    <LinearLayout
        style="@style/width_mp_height_wc"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <TextView
            style="@style/header_text_custom"
            android:text="Staff"
            android:textColor="@color/black" />

        <TextView
            style="@style/header_text_custom"
            android:text=", " />

        <TextView
            style="@style/header_text_custom"
            android:text="Thanh Huy"
            android:textColor="@color/primaryColor" />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/text_input_layout_custom"
        android:layout_marginTop="50dp"
        app:passwordToggleEnabled="true">

        <EditText
            style="@style/width_mp_height_wc"
            android:autofillHints="emailAddress"
            android:hint="@string/current_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textSize="17sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/text_input_layout_custom"
        android:layout_marginTop="15dp"
        app:passwordToggleEnabled="true">

        <EditText
            style="@style/width_mp_height_wc"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textSize="17sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/text_input_layout_custom"
        android:layout_marginTop="15dp"
        app:passwordToggleEnabled="true">

        <EditText
            style="@style/width_mp_height_wc"
            android:autofillHints="phone"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textSize="17sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:background="@drawable/background_green_radius_10dp"
        android:onClick="saveChangePassword"
        android:paddingStart="60dp"
        android:paddingEnd="60dp"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold" />
</LinearLayout>