<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/width_wc_height_wc"
    android:background="@drawable/background_white_radius_10dp"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingTop="30dp">

    <ImageView
        android:id="@+id/image_view_icon_notify"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/text_view_notify_message"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:text="@string/reset_password"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/text_input_layout_custom"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/edtUsername"
            style="@style/width_mp_height_wc"
            android:autofillHints="emailAddress"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textSize="17sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        style="@style/width_mp_height_wc"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_action_1"
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:background="@drawable/background_white_radius_10dp"
            android:backgroundTint="@color/primaryColor"
            android:lines="1"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/dimiss"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_action_2"
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:background="@drawable/background_white_radius_10dp"
            android:backgroundTint="@color/primaryColor"
            android:lines="1"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/confirm"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>
